added homepage , header, footer and styles

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,1 +1,13 @@
+#root,
+body {
+  margin: 0;
+}
 
+.app {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  text-align: center;
+  background-color: rgb(129, 59, 59);
+  // margin: 0;
+  /* display: flex;
+  align-items: center; */
+}
