--- a/src/styles/products-page.scss
+++ b/src/styles/products-page.scss
@@ -1,37 +1,45 @@
-.product-card-wrapper {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  /* grid-template-rows: 1fr 1fr; */
+.product-page-body {
   z-index: -1;
   overflow: auto;
   position: absolute;
-  top: 80px;
+  top: 150px;
   bottom: 75px;
   left: 0px;
   right: 0px;
   background-color: rgb(129, 59, 59);
-}
 
-.product-card {
-  width: 300px;
-  height: 400px;
-  margin: 20px;
-  padding: 20px;
-  background-color: rgb(248, 244, 239);
-
-  border-radius: 10px;
-  box-shadow: 10px 10px 5px 0px rgba(154, 113, 113, 0.75);
-
-  img {
-    width: 100px;
-    /* height: 75px; */
-    /* border-radius: 25px; */
-    /* border: 1px solid black; */
-    /* padding: 10px; */
+  .filter-container {
+    display: flex;
+    margin: 25px;
   }
 
-  p {
-    border: 1px solid black;
-    border-radius: 5px;
+  .product-card-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    /* grid-template-rows: 1fr 1fr; */
+
+    .product-card {
+      width: 300px;
+      height: 400px;
+      margin: 20px;
+      padding: 20px;
+      background-color: rgb(248, 244, 239);
+
+      border-radius: 10px;
+      box-shadow: 10px 10px 5px 0px rgba(154, 113, 113, 0.75);
+
+      img {
+        width: 100px;
+        /* height: 75px; */
+        /* border-radius: 25px; */
+        /* border: 1px solid black; */
+        /* padding: 10px; */
+      }
+
+      p {
+        border: 1px solid black;
+        border-radius: 5px;
+      }
+    }
   }
 }
