Added cart total and checkout

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,6 @@
 @import './app.scss';
 @import './products-page.scss';
+@import './single-product-page.scss';
 @import './header.scss';
 @import './home.scss';
 @import './footer.scss';
