--- a/src/styles/cart.scss
+++ b/src/styles/cart.scss
@@ -1,22 +1,65 @@
-.cart-product-card {
-  width: 200px;
-  height: 300px;
-  margin: 20px;
-  padding: 20px;
-  background-color: rgb(248, 244, 239);
-  border-radius: 10px;
-  box-shadow: 10px 10px 5px 0px rgba(154, 113, 113, 0.75);
+.cart-page-body {
+  z-index: -1;
+  overflow: auto;
+  position: absolute;
+  top: 130px;
+  bottom: 50px;
+  left: 0px;
+  right: 0px;
+  background-color: rgb(129, 59, 59);
 
-  img {
-    width: 75px;
-    /* height: 75px; */
-    /* border-radius: 25px; */
-    /* border: 1px solid black; */
-    /* padding: 10px; */
+  .cart-card-container {
+    font-size: 20px;
+    padding: 25px;
+
+    .cart-product-card {
+      width: 200px;
+      height: 300px;
+      margin: 20px;
+      padding: 20px;
+      background-color: rgb(248, 244, 239);
+      border-radius: 10px;
+      box-shadow: 10px 10px 5px 0px rgba(154, 113, 113, 0.35);
+
+      a {
+        text-decoration: none;
+        color: rgb(65, 15, 15);
+      }
+
+      img {
+        width: 75px;
+      }
+
+      button {
+        background-color: rgb(248, 244, 239);
+        color: rgb(65, 15, 15);
+        border: none;
+        font-size: 15px;
+        padding: 5px;
+        border-radius: 5px;
+        box-shadow: 7px 7px 5px 0px rgba(154, 113, 113, 0.35);
+      }
+    }
   }
+  .checkout-container {
+    position: absolute;
+    top: 150px;
+    left: 50%;
 
-  p {
-    border: 1px solid black;
-    border-radius: 5px;
+    button {
+      background-color: rgb(248, 244, 239);
+      color: rgb(65, 15, 15);
+      border: none;
+      font-size: 20px;
+      padding: 15px 30px;
+      border-radius: 5px;
+      box-shadow: 7px 7px 5px 0px rgba(154, 113, 113, 0.35);
+
+      &:hover {
+        background-color: rgb(182, 96, 96);
+        color: rgb(248, 244, 239);
+        border: 1px solid rgb(65, 15, 15);
+      }
+    }
   }
 }
