--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -5,8 +5,13 @@
   right: 0px;
   background-color: rgb(248, 244, 239);
   width: 100vw;
-  height: 75px;
+  height: 50px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
+
+  a {
+    text-decoration: none;
+    color: rgb(65, 15, 15);
+  }
 }
