--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -5,8 +5,8 @@
   z-index: -1;
   overflow: auto;
   position: absolute;
-  top: 150px;
-  bottom: 75px;
+  top: 130px;
+  bottom: 50px;
   left: 0px;
   right: 0px;
   background-color: rgb(129, 59, 59);
@@ -18,6 +18,11 @@
   }
   .cards-container {
     display: flex;
+
+    a {
+      text-decoration: none;
+      color: rgb(65, 15, 15);
+    }
     .filter-card {
       width: 200px;
       height: 250px;
@@ -25,7 +30,7 @@
       padding: 20px;
       background-color: rgb(248, 244, 239);
       border-radius: 10px;
-      box-shadow: 10px 10px 5px 0px rgba(154, 113, 113, 0.75);
+      box-shadow: 10px 10px 5px 0px rgba(154, 113, 113, 0.35);
 
       img {
         width: 100px;
