--- a/src/styles/products-page.scss
+++ b/src/styles/products-page.scss
@@ -2,8 +2,8 @@
   z-index: -1;
   overflow: auto;
   position: absolute;
-  top: 150px;
-  bottom: 75px;
+  top: 130px;
+  bottom: 50px;
   left: 0px;
   right: 0px;
   background-color: rgb(129, 59, 59);
@@ -18,6 +18,11 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
     /* grid-template-rows: 1fr 1fr; */
 
+    a {
+      text-decoration: none;
+      color: rgb(65, 15, 15);
+    }
+
     .product-card {
       width: 300px;
       height: 400px;
@@ -26,19 +31,27 @@
       background-color: rgb(248, 244, 239);
 
       border-radius: 10px;
-      box-shadow: 10px 10px 5px 0px rgba(154, 113, 113, 0.75);
+      box-shadow: 10px 10px 5px 0px rgba(154, 113, 113, 0.35);
 
       img {
         width: 100px;
-        /* height: 75px; */
-        /* border-radius: 25px; */
-        /* border: 1px solid black; */
-        /* padding: 10px; */
       }
+    }
 
-      p {
-        border: 1px solid black;
-        border-radius: 5px;
+    button {
+      background-color: rgb(248, 244, 239);
+      color: rgb(65, 15, 15);
+      border: none;
+      font-size: 20px;
+      padding: 15px;
+      border-radius: 5px;
+      box-shadow: 7px 7px 5px 0px rgba(154, 113, 113, 0.35);
+
+      &:hover {
+        background-color: rgb(182, 96, 96);
+        color: rgb(248, 244, 239);
+        padding: 15px;
+        border: 1px solid rgb(65, 15, 15);
       }
     }
   }
